--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "jsonwebtoken": "^9.0.2"
+    "bcrypt": "^6.0.0"
   }
 }
