--- a/rider-service/package.json
+++ b/rider-service/package.json
@@ -16,7 +16,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.19.3"
   },
   "devDependencies": {
